# practica_ros2

./: README.md
Videos Robot Fake/: Ejercicio4_rotar_ROS2.mkv
acciones_pkg/: CMakeLists.txt  package.xml
acciones_pkg/action/: DibujarPoligono.action  MoverTriangulo.action  MoverTurtle.action
ejercicio1/: package.xml  setup.py
ejercicio1/ejercicio1/: mover_linea.py
ejercicio2/: package.xml  setup.py
ejercicio2/ejercicio2/: mover_odom.py
ejercicio3/: package.xml  setup.py
ejercicio3/ejercicio3/: mover_por_servicio.py
ejercicio4/: package.xml  setup.cfg  setup.py
ejercicio4/ejercicio4/: mover_configurable.py
ejercicio5/: package.xml  setup.cfg  setup.py
ejercicio5/ejercicio5/: cliente_movimiento.py  servidor_movimiento.py
ejercicio6/: package.xml  setup.cfg  setup.py
ejercicio6/ejercicio6/: cliente_triangulo.py  servidor_triangulo.py
ejercicio7/: package.xml  setup.cfg  setup.py
ejercicio7/ejercicio7/: cliente_poligono.py  servidor_poligono.py
ejercicio8/: package.xml  setup.cfg  setup.py
ejercicio8/ejercicio8/: seguridad_lidar.py
interfaces_pkg/: CMakeLists.txt  package.xml
interfaces_pkg/srv/: Movimiento.srv
